cambios front para mongo db

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="robots" content="noindex, nofollow">
     <title>Chatter+</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="images/favicon.png" />
